--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -1,22 +1,21 @@
 [package]
 name = "sold"
-version = "0.1.1"
+version = "0.63.0"
 edition = "2021"
 
 [dependencies]
-ansi_term = "0.12"
 atty = "0.2"
 clap = { version = "3.2.*", features = [ "derive" ] }
 failure = "0.1"
-lazy_static = "1.4"
 once_cell = "1.10"
 serde = { features = [ "derive" ], version = "1.0" }
 serde_json = "1.0"
+strip-ansi-escapes = "0.1.1"
 
-ton_abi = { git = 'https://github.com/tonlabs/ton-labs-abi.git', tag = '2.2.12' }
-ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.7.53' }
+ton_abi = { git = 'https://github.com/tonlabs/ton-labs-abi.git', tag = '2.3.1' }
+ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.8.0' }
 ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.11.3' }
-tvm_linker = { git = 'https://github.com/tonlabs/TVM-linker.git', tag = '0.15.48' }
+tvm_linker = { git = 'https://github.com/tonlabs/TVM-linker.git', tag = '0.15.65' }
 
 [build-dependencies]
 bindgen = "0.59"
