--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -1,26 +1,27 @@
 [package]
-name = "sold"
-version = "0.63.0"
-edition = "2021"
+edition = '2021'
+name = 'sold'
+version = '0.64.0'
 
 [dependencies]
-atty = "0.2"
-clap = { version = "3.2.*", features = [ "derive" ] }
-failure = "0.1"
-once_cell = "1.10"
-serde = { features = [ "derive" ], version = "1.0" }
-serde_json = "1.0"
-strip-ansi-escapes = "0.1.1"
-
-ton_abi = { git = 'https://github.com/tonlabs/ton-labs-abi.git', tag = '2.3.1' }
-ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.8.0' }
-ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.11.3' }
-tvm_linker = { git = 'https://github.com/tonlabs/TVM-linker.git', tag = '0.15.65' }
+atty = '0.2'
+dunce = '1.0'
+failure = '0.1'
+once_cell = '1.10'
+serde_json = '1.0'
+strip-ansi-escapes = '0.1.1'
+clap = { features = [ 'derive' ], version = '3.2.*' }
+serde = { features = [ 'derive' ], version = '1.0' }
+ton_abi = { git = 'https://github.com/tonlabs/ton-labs-abi.git', tag = '2.3.7' }
+ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.8.3' }
+ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.11.4' }
+tvm_linker = { git = 'https://github.com/tonlabs/TVM-linker.git', tag = '0.15.70' }
 
 [build-dependencies]
-bindgen = "0.59"
-cmake = "0.1"
+bindgen = '0.60.1'
+cmake = '0.1'
 
 [dev-dependencies]
-assert_cmd = "1.0.3"
-predicates = "1"
+assert_cmd = '2.0.4'
+predicates = '2.1.1'
+
