--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = '2021'
 name = 'sold'
-version = '0.71.0'
+version = '0.72.0'
 
 [[bin]]
 name = 'sold'
@@ -11,22 +11,22 @@ path = 'src/main.rs'
 atty = '0.2'
 dunce = '1.0'
 failure = '0.1'
-once_cell = '1.17'
+once_cell = '1.18'
 serde_json = { features = [ 'unbounded_depth' ], version = '1.0' }
-strip-ansi-escapes = '0.1'
-clap = { features = [ 'derive' ], version = '4.2' }
+strip-ansi-escapes = '0.2'
+clap = { features = [ 'derive' ], version = '4.3' }
 serde = { features = [ 'derive' ], version = '1.0' }
-ton_abi = { git = 'https://github.com/tonlabs/ever-abi.git', tag = '2.3.129' }
-ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.88' }
-ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.18' }
-tvm_linker = { git = 'https://github.com/tonlabs/TVM-linker.git', tag = '0.20.4' }
+ton_abi = { git = 'https://github.com/tonlabs/ever-abi.git', tag = '2.3.147' }
+ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.104' }
+ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.28' }
+ton_labs_assembler = { features = [ 'gosh' ], git = 'https://github.com/tonlabs/ever-assembler.git', tag = '1.4.15' }
 
 [build-dependencies]
 cmake = '0.1'
 
 [dev-dependencies]
 assert_cmd = '2.0'
-predicates = "3.0"
+predicates = '3.0'
 
 [lib]
 name = 'sold_lib'
