Fix sold dependencies

--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -19,7 +19,7 @@ serde = { features = [ 'derive' ], version = '1.0' }
 ton_abi = { git = 'https://github.com/tonlabs/ever-abi.git', tag = '2.3.147' }
 ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.104' }
 ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.28' }
-ton_labs_assembler = { features = [ 'gosh' ], git = 'https://github.com/tonlabs/ever-assembler.git', tag = '1.4.15' }
+ton_labs_assembler = { features = [ 'gosh' ], git = 'https://github.com/gosh-sh/ever-assembler.git', branch = 'feature/gosh_hash' }
 
 [build-dependencies]
 cmake = '0.1'
