--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -1,33 +1,33 @@
 [package]
-edition = '2021'
-name = 'sold'
-version = '0.72.0'
+edition = "2021"
+name = "sold"
+version = "0.72.0"
 
 [[bin]]
-name = 'sold'
-path = 'src/main.rs'
+name = "sold"
+path = "src/main.rs"
 
 [dependencies]
-atty = '0.2'
-dunce = '1.0'
-failure = '0.1'
-once_cell = '1.18'
-serde_json = { features = [ 'unbounded_depth' ], version = '1.0' }
-strip-ansi-escapes = '0.2'
-clap = { features = [ 'derive' ], version = '4.3' }
-serde = { features = [ 'derive' ], version = '1.0' }
-ton_abi = { git = 'https://github.com/tonlabs/ever-abi.git', tag = '2.3.147' }
-ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.104' }
-ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.28' }
-ton_labs_assembler = { features = [ 'gosh' ], git = 'https://github.com/tonlabs/ever-assembler.git', tag = '1.4.15' }
+atty = "0.2"
+clap = { features = ["derive"], version = "4.3" }
+dunce = "1.0"
+failure = "0.1"
+once_cell = "1.18"
+serde = { features = ["derive"], version = "1.0" }
+serde_json = { features = ["unbounded_depth"], version = "1.0" }
+strip-ansi-escapes = "0.2"
+tvm_abi = { git = "https://github.com/tvmlabs/tvm-abi", tag = "3.0.0" }
+tvm_assembler = { features = ["gosh"], git = "https://github.com/tvmlabs/tvm-assembler", tag = "2.0.0" }
+tvm_block = { git = "https://github.com/tvmlabs/tvm-block", tag = "2.0.0" }
+tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }
 
 [build-dependencies]
-cmake = '0.1'
+cmake = "0.1"
 
 [dev-dependencies]
-assert_cmd = '2.0'
-predicates = '3.0'
+assert_cmd = "2.0"
+predicates = "3.0"
 
 [lib]
-name = 'sold_lib'
-path = 'src/lib.rs'
+name = "sold_lib"
+path = "src/lib.rs"
