--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -8,25 +8,25 @@ name = "sold"
 path = "src/main.rs"
 
 [dependencies]
-atty = "0.2"
-clap = { features = ["derive"], version = "4.3" }
-dunce = "1.0"
-failure = "0.1"
-once_cell = "1.18"
-serde = { features = ["derive"], version = "1.0" }
-serde_json = { features = ["unbounded_depth"], version = "1.0" }
-strip-ansi-escapes = "0.2"
+anyhow = "1.0.79"
+atty = "0.2.14"
+clap = { features = ["derive"], version = "4.4.18" }
+dunce = "1.0.4"
+once_cell = "1.19.0"
+serde = { features = ["derive"], version = "1.0.196" }
+serde_json = { features = ["unbounded_depth"], version = "1.0.113" }
+strip-ansi-escapes = "0.2.0"
 tvm_abi = { git = "https://github.com/tvmlabs/tvm-abi", tag = "3.0.0" }
 tvm_assembler = { features = ["gosh"], git = "https://github.com/tvmlabs/tvm-assembler", tag = "2.0.0" }
 tvm_block = { git = "https://github.com/tvmlabs/tvm-block", tag = "2.0.0" }
 tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }
 
 [build-dependencies]
-cmake = "0.1"
+cmake = "0.1.50"
 
 [dev-dependencies]
-assert_cmd = "2.0"
-predicates = "3.0"
+assert_cmd = "2.0.13"
+predicates = "3.1.0"
 
 [lib]
 name = "sold_lib"
