--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -18,7 +18,7 @@ strip-ansi-escapes = '0.2'
 clap = { features = [ 'derive' ], version = '4.3' }
 serde = { features = [ 'derive' ], version = '1.0' }
 tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0' }
-tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0' }
+tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0', features = [ 'gosh' ] }
 tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0' }
 tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0' }
 
