--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -17,10 +17,10 @@ serde_json = { features = [ 'unbounded_depth' ], version = '1.0' }
 strip-ansi-escapes = '0.2'
 clap = { features = [ 'derive' ], version = '4.3' }
 serde = { features = [ 'derive' ], version = '1.0' }
-tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', branch='vergrth16' }
-tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', branch='vergrth16', features = [ 'gosh' ] }
-tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', branch='vergrth16' }
-tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', branch='vergrth16' }
+tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = 'ed6477280c6458787f5fe5849cd7d09aeb1e529b'  }
+tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = 'ed6477280c6458787f5fe5849cd7d09aeb1e529b' , features = [ 'gosh' ] }
+tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = 'ed6477280c6458787f5fe5849cd7d09aeb1e529b'  }
+tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = 'ed6477280c6458787f5fe5849cd7d09aeb1e529b'  }
 
 [build-dependencies]
 cmake = '0.1'
