--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -10,15 +10,15 @@ path = 'src/main.rs'
 [dependencies]
 atty = '0.2'
 dunce = '1.0'
-failure = '0.1'
+anyhow = '1.0'
 once_cell = '1.19'
 serde_json = { features = [ 'unbounded_depth' ], version = '1.0' }
 strip-ansi-escapes = '0.2'
 clap = { features = [ 'derive' ], version = '4.5' }
 serde = { features = [ 'derive' ], version = '1.0' }
-ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.5.6' }
-ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.10.4' }
-ever_assembler = { features = [ 'gosh' ], git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.5.9' }
+ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.6.1' }
+ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.0' }
+ever_assembler = { features = [ 'gosh' ], git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.6.2' }
 
 [build-dependencies]
 cmake = '0.1'
@@ -30,18 +30,3 @@ predicates = '3.1'
 [lib]
 name = 'sold_lib'
 path = 'src/lib.rs'
-
-[patch.'https://github.com/tonlabs/lockfree.git']
-lockfree = { git = 'https://github.com/everx-labs/lockfree.git' }
-
-[patch.'https://github.com/tonlabs/ever-abi.git']
-ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.5.6' }
-
-[patch.'https://github.com/tonlabs/ever-vm.git']
-ever_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.1.9' }
-
-[patch.'https://github.com/tonlabs/ever-block.git']
-ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.10.4' }
-
-[patch.'https://github.com/tonlabs/ever-assembler.git']
-ever_assembler = { features = [ 'gosh' ], git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.5.9' }
