--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -13,22 +13,22 @@ atty = '0.2'
 dunce = '1.0'
 failure = '0.1'
 once_cell = '1.19'
-serde_json = { features = [ 'unbounded_depth' ], version = '1.0' }
+serde_json = { features = ['unbounded_depth'], version = '1.0' }
 strip-ansi-escapes = '0.2'
-clap = { features = [ 'derive' ], version = '4.5' }
-serde = { features = [ 'derive' ], version = '1.0' }
+clap = { features = ['derive'], version = '4.5' }
+serde = { features = ['derive'], version = '1.0' }
 
 #tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '69e84f0a3cc7d4394450e3d97f9f1c28ac3ae186'  }
 #tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '69e84f0a3cc7d4394450e3d97f9f1c28ac3ae186' , features = [ 'gosh' ] }
 #tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '69e84f0a3cc7d4394450e3d97f9f1c28ac3ae186'  }
 #tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '69e84f0a3cc7d4394450e3d97f9f1c28ac3ae186'  }
 
-tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '57329d5389032db2240d261ecd91ce9ec790f377'  }
-tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '57329d5389032db2240d261ecd91ce9ec790f377' , features = [ 'gosh' ] }
-tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '57329d5389032db2240d261ecd91ce9ec790f377'  }
-tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '57329d5389032db2240d261ecd91ce9ec790f377'  }
-
-
+tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '57329d5389032db2240d261ecd91ce9ec790f377' }
+tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '57329d5389032db2240d261ecd91ce9ec790f377', features = [
+  'gosh',
+] }
+tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '57329d5389032db2240d261ecd91ce9ec790f377' }
+tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '57329d5389032db2240d261ecd91ce9ec790f377' }
 
 
 [build-dependencies]
