update tvm-sdk link

--- a/sold/Cargo.toml
+++ b/sold/Cargo.toml
@@ -23,12 +23,17 @@ serde = { features = ['derive'], version = '1.0' }
 #tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '69e84f0a3cc7d4394450e3d97f9f1c28ac3ae186'  }
 #tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '69e84f0a3cc7d4394450e3d97f9f1c28ac3ae186'  }
 
-tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '6b92329' }
-tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '6b92329', features = [
+#tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '6b92329' }
+#tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '6b92329', features = ['gosh',] }
+#tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '6b92329' }
+#tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '6b92329' }
+
+tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = 'aff4c35ed2833493eb2886137f4ff65b1366c14f' }
+tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = 'aff4c35ed2833493eb2886137f4ff65b1366c14f', features = [
   'gosh',
 ] }
-tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '6b92329' }
-tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = '6b92329' }
+tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = 'aff4c35ed2833493eb2886137f4ff65b1366c14f' }
+tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', rev = 'aff4c35ed2833493eb2886137f4ff65b1366c14f' }
 
 
 [build-dependencies]
